Replace JNA and linuxio4j with FFI