@@ -48,10 +48,18 @@ ext {
 	tmpDir = layout.buildDirectory.dir 'tmp'
 	runtimeDir = tmpDir.map { it.dir 'runtime' }
 
-	xmsJvmArg = '-Xms128m'
+	def mainModule = project.application.mainModule.get()
+	commonJvmArgs = [
+		'-Xms128m',
+		"--enable-native-access=$mainModule"
+	]
+	windowsJvmArgs = [
+		"--add-opens=java.desktop/java.awt=$mainModule",
+		"--add-opens=java.desktop/sun.awt.windows=$mainModule"
+	]
 	linuxJvmArgs = [
-		"--add-opens=java.desktop/sun.awt=${project.application.mainModule.get()}",
-		"--add-opens=java.desktop/sun.awt.X11=${project.application.mainModule.get()}"
+		"--add-opens=java.desktop/sun.awt=$mainModule",
+		"--add-opens=java.desktop/sun.awt.X11=$mainModule"
 	]
 
 	gamecontrollerdbGitFile = "$projectDir/SDL_GameControllerDB/gamecontrollerdb.txt"
@@ -94,7 +102,6 @@ dependencies {
 	errorprone('com.google.errorprone:error_prone_core:2.37.0')
 
 	def dbusJavaVersion = '5.1.1'
-	def jnaVersion = '5.17.0'
 	def lwjglVersion = '3.4.0-SNAPSHOT'
 
 	def lwjglOs
@@ -133,18 +140,12 @@ dependencies {
 	implementation("com.github.hypfvieh:dbus-java-transport-native-unixsocket:$dbusJavaVersion") { exclude group: 'org.slf4j', module: 'slf4j-api' }
 	implementation 'com.google.code.gson:gson:2.12.1'
 	implementation 'io.github.classgraph:classgraph:4.8.179'
-	implementation "net.java.dev.jna:jna-jpms:$jnaVersion"
-	implementation "net.java.dev.jna:jna-platform-jpms:$jnaVersion"
 	implementation('org.apache.xmlgraphics:batik-swing:1.18') { exclude group: 'xml-apis', module: 'xml-apis' }
 	implementation "org.lwjgl:lwjgl:$lwjglVersion"
 	implementation "org.lwjgl:lwjgl:$lwjglVersion:natives-$lwjglPlatform"
 	implementation "org.lwjgl:lwjgl-sdl:$lwjglVersion"
 	implementation "org.lwjgl:lwjgl-sdl:$lwjglVersion:natives-$lwjglPlatform"
 	implementation 'org.slf4j:slf4j-jdk14:2.0.17'
-	implementation('uk.co.bithatch:linuxio4j:2.1') {
-		exclude module: 'jna'
-		exclude module: 'jna-platform'
-	}
 }
 
 extraJavaModuleInfo {
@@ -165,8 +166,6 @@ tasks.register('generateModuleInfo') {
 
 			    requires com.google.gson;
 			    requires com.formdev.flatlaf;
-			    requires com.sun.jna;
-			    requires com.sun.jna.platform;
 			    requires io.github.classgraph;
 			    requires transitive java.desktop;
 			    requires java.logging;
@@ -184,7 +183,6 @@ tasks.register('generateModuleInfo') {
 			    requires org.lwjgl.natives;
 			    requires org.lwjgl.sdl;
 			    requires org.lwjgl.sdl.natives;
-			    requires uk.co.bithatch.linuxio;
 			    requires xml.apis.ext;
 			}
 			'''.stripIndent()
@@ -360,9 +358,10 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 run {
-	jvmArgs += xmsJvmArg
-
-	if (os.linux)
+	jvmArgs += commonJvmArgs
+	if (os.windows)
+		jvmArgs += windowsJvmArgs
+	else if (os.linux)
 		jvmArgs += linuxJvmArgs
 }
 
@@ -427,12 +426,14 @@ tasks.register('jpackage', Exec) {
 		"Copyright ${new Date().format 'yyyy'} Matteo Hausner",
 		'--vendor',
 		'Matteo Hausner',
-		'--verbose',
-		'--java-options',
-		xmsJvmArg
+		'--verbose'
 	]
-	if (os.linux)
-		linuxJvmArgs.each { commandLineParts.addAll(['--java-options', it]) }
+	def jvmArgs = commonJvmArgs
+	if (os.windows)
+		jvmArgs += windowsJvmArgs
+	else if (os.linux)
+		jvmArgs += linuxJvmArgs
+	jvmArgs.each { commandLineParts.addAll(['--java-options', it]) }
 	commandLine commandLineParts
 }
 
